--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-streamlit
-pandas
-requests
-beautifulsoup4
-openai
+streamlit==1.31.0
+pandas==2.2.0
+requests==2.31.0
+beautifulsoup4==4.12.3
+openai==1.3.0
+openpyxl==3.1.2
+tabulate==0.9.0
+python-dateutil==2.8.2
+googlesearch-python==1.2.3
