--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-streamlit==1.12.0
-pandas==2.0.3
+streamlit==1.28.2
+pandas==2.1.4
+numpy==1.26.2
+beautifulsoup4==4.12.2
 requests==2.31.0
-beautifulsoup4==4.12.3
-openai==0.28.0
+openai==1.3.7
+python-dotenv==1.0.0
+urllib3==2.1.0
