--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,10 @@ pandas==2.1.4
 numpy==1.26.2
 beautifulsoup4==4.12.2
 requests==2.31.0
+selenium==4.16.0
+webdriver-manager==4.0.1
+undetected-chromedriver==3.5.4
+playwright==1.41.0
 openai>=1.3.7
 python-dotenv==1.0.0
 urllib3==2.1.0
