--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,11 @@ openai>=1.3.7
 python-dotenv==1.0.0
 urllib3==2.1.0
 altair==4.2.2
+
+# Development dependencies
+pre-commit==3.6.0
+black==23.12.1
+isort==5.13.2
+flake8==6.1.0
+flake8-docstrings==1.7.0
+mypy==1.8.0
